--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,10 +67,10 @@ li {
   padding-bottom: 80px;
 }
 
-/*.about h3 {
+.about h3 {
   padding-top: 80px;
   padding-bottom: 20px;
-}*/
+}
 
 .about p {
   padding: 0px 150px;
